--- a/app/src/main/res/layout/layout_post_item.xml
+++ b/app/src/main/res/layout/layout_post_item.xml
@@ -1,40 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent" android:layout_height="130dp"
+    android:layout_width="match_parent"
+    android:layout_height="130dp"
     android:layout_marginStart="10dp"
+    android:layout_marginTop="5dp"
     android:layout_marginEnd="10dp"
     android:layout_marginBottom="5dp"
-    android:layout_marginTop="5dp"
     app:cardCornerRadius="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:weightSum="14"
-        android:layout_gravity="center"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
+        android:gravity="center"
         android:orientation="vertical">
 
-        <include layout="@layout/layout_post_item_header"
-            android:layout_height="wrap_content"
+        <TextView
+            android:id="@+id/textHeader"
             android:layout_width="match_parent"
-            android:layout_weight=".25"/>
+            android:layout_height="24dp"
+            android:gravity="bottom"
+            android:layout_marginTop="4dp"/>
 
-        <include layout="@layout/layout_post_item_body"
-            android:layout_height="wrap_content"
+        <View
             android:layout_width="match_parent"
-            android:layout_weight="13.5"/>
+            android:layout_height="1dp"
+            android:background="@color/colorAccent" />
 
-        <include layout="@layout/layout_post_item_bottom"
-            android:layout_height="wrap_content"
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_weight=".25"/>
+            android:layout_height="80dp"
+            android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center" />
 
+            <TextView
+                android:id="@+id/textTitle"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="10dp"
+                android:ellipsize="end"
+                android:gravity="start|center"
+                android:maxLines="3"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorAccent" />
+
+        <TextView
+            android:id="@+id/comments"
+            android:layout_width="match_parent"
+            android:layout_height="24dp"
+            android:textStyle="bold"
+            android:gravity="top"
+            android:layout_marginBottom="4dp" />
 
     </LinearLayout>
 
