--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,13 +33,13 @@
     <FrameLayout
         android:id="@+id/expandable"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:translationZ="10dp">
+        android:layout_height="0dp">
 
         <include
             layout="@layout/image_view_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:elevation="20dp" />
 
     </FrameLayout>
 
