--- a/app/src/main/res/layout/layout_post_item.xml
+++ b/app/src/main/res/layout/layout_post_item.xml
@@ -64,8 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="24dp"
             android:layout_marginBottom="4dp"
-            android:gravity="top"
-            android:textStyle="bold" />
+            android:gravity="top" />
 
     </LinearLayout>
 
